--- a/static/css/windows.css
+++ b/static/css/windows.css
@@ -44,6 +44,7 @@ body{
     flex-direction: column;
     padding-left: 1vw;
     padding-top: 2vh;
+    z-index: -999;
 }
 
 .desktop-icon{
@@ -55,11 +56,12 @@ body{
 }
 
 .desktop-icon img{
-    height: 4vh;
+    height: 40px;
 }
 
 .window{
     margin-top: 3vh;
+    /*box-shadow: 4px 1.5px 5px #070707;*/
 }
 
 .window-body {
@@ -102,6 +104,7 @@ body{
 
 #game-container {
     margin-top: 0;
+    box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf, inset -2px -2px grey, inset 2px 2px #fff;
 }
 
 #game-screen {
@@ -115,4 +118,20 @@ body{
 #jsdos{
     width:100%;
     height:100%;
+}
+
+.clippy{
+    width: 20%;
+    height:20%;
+    position:fixed;
+    background: url('/static/images/clippycursed.gif') no-repeat;
+    background-position: center;
+}
+
+#intro-title-bar, #rating-title-bar{
+    justify-content: flex-start;
+}
+
+.title-bar img, .title-bar div img{
+    padding-right: 4px;
 }
